--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "socket.io": "^4.0.1"
   },
   "devDependencies": {
     "@types/socket.io": "^2.1.13",
+    "eslint": "^7.25.0",
     "nodemon": "^2.0.7"
   },
   "scripts": {
